<resources>
    <string name="app_name">Tip Time</string>
    <string name="judul">Tip Time</string>
    <string name="cost">Cost of Service</string>
    <string name="question">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="calculate">CALCULATE</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount</string>
</resources>